--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "terser": "^5.31.2",
     "vite": "^5.3.1"
   },
   "dependencies": {
